wacc/test/golden/syntaxErr.function.funcExpr
# function calls are not first-class expressions

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 0 
  end
  int x = f() + f()
end
	


In test/wacc_examples/invalid/syntaxErr/function/funcExpr.wacc (line 15, column 11):
unexpected "f()"
expected expression
expressions may start with integer, string, character or boolean literals; identifiers; unary operators; null; or parentheses
function calls may not appear in expressions and must use `call`

>   end
>   int x = f() + f()
>           ^^^
> end

